# GeneGnome

./: .dockerignore  .env.example  .gitignore  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml
api-gateway/: Cargo.toml  Dockerfile
api-gateway/src/: handlers.rs  main.rs  models.rs  queue.rs  security.rs  state.rs  validator.rs
api-gateway/src/middleware/: auth.rs  mod.rs
app/: Cargo.toml
app/docs/: vcf_parser_benchmark.md
app/examples/: genotype_converter_example.rs  minimal_gz_test.rs  noodles_debug_test.rs  pgs_parser_example.rs  vcf_test.rs  vcf_text_test.rs
app/src/: audit.rs  genotype_converter.rs  lib.rs  main.rs  models.rs  output.rs  processor.rs  reference_panel.rs  secure_delete.rs  validator.rs
app/src/parsers/: genome23andme.rs  mod.rs  pgs.rs  vcf.rs
database/: init.sql
database/migrations/: 001_add_email_downloads.sql  002_fix_cleanup_permissions.sql  README.md
docs/: CHANGELOG_2025-11-12.md  CHANGELOG_2025-11-17.md  EMAIL_DOWNLOADS_IMPLEMENTATION.md  PGS_CALCULATION_REFERENCE.md  REFERENCE_DATA.md  STATUS.md  email_credential_security_design.md  mergeData_pipeline_analysis.md  noodles_vcf_research.md  parquet_usage_guide.md  platform_architecture.md  r_processing_pipeline_specification.md  r_script_output_analysis.md  rust_implementation_strategy.md  rust_vs_r_comparison.md
docs/architecture/: data_comparison_analysis.md
examples/: README.md  example_23andme.txt  example_imputed.vcf
frontend/: Dockerfile  nginx.conf
frontend/www/: darkmode.js  download.html  download.js  home.css  home.html  process.css  process.html  progress.js  results-example.css  results-example.html  results-example.js  stisty_wasm.js  style.css  themes.js  upload.js  vcf-app.js  vcf-generator.html
frontend/www/images/favicon/: site.webmanifest
scripts/: TROUBLESHOOTING.md  cleanup_encrypted_volume.sh  convert_reference_to_db.R  manage_encrypted_volume.sh  setup_encrypted_volume.sh
templates/email/: download_ready.html  download_ready.txt
worker/: Cargo.toml  Dockerfile
worker/src/: email.rs  job_processor.rs  main.rs  queue.rs
