# ==============================================================================
# Cargo.toml - Genetics API Gateway Dependencies
# ==============================================================================
# Description: Rust dependencies for secure genetics data API gateway
# Author: Matt Barham
# Created: 2025-11-06
# Modified: 2026-01-17
# Version: 1.0.0
# ==============================================================================
# Security: All versions pinned to latest stable releases (no RC/alpha/beta)
# Review Date: 2025-11-06
# Next Review: 2025-12-06 (monthly security updates)
# ==============================================================================

[package]
name = "genetics-api-gateway"
version = "1.0.0"
edition = "2021"
authors = ["Matt Barham"]
rust-version = "1.91"

# ==============================================================================
# ASYNC RUNTIME
# ==============================================================================
[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.83"

# ==============================================================================
# WEB FRAMEWORK (Axum)
# ==============================================================================
# BREAKING CHANGE: axum 0.7 → 0.8.6
# - State extraction API changes
# - Migration: Review axum 0.8 changelog
axum = { version = "0.8.6", features = ["multipart", "ws", "macros"] }

# BREAKING CHANGE: axum-extra 0.9 → 0.12.1
# - API updates for typed headers
axum-extra = { version = "0.12.1", features = ["typed-header"] }

tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace", "limit"] }
hyper = { version = "1.7.0", features = ["full"] }

# ==============================================================================
# DATABASE
# ==============================================================================
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# ==============================================================================
# REDIS (Job Queue)
# ==============================================================================
# NOTE: redis 1.0.0-rc.3 available but staying with stable 0.32.2
redis = { version = "0.32.2", features = ["tokio-comp", "connection-manager"] }

# ==============================================================================
# FILE HANDLING
# ==============================================================================
tempfile = "3.23.0"
tokio-util = { version = "0.7.17", features = ["io"] }
flate2 = "1.0.35"

# ==============================================================================
# VALIDATION
# ==============================================================================
validator = "0.20.0"
sha2 = "0.10.8"

# ==============================================================================
# SERIALIZATION
# ==============================================================================
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# ==============================================================================
# LOGGING
# ==============================================================================
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# ==============================================================================
# ERROR HANDLING
# ==============================================================================
thiserror = "2.0.17"
anyhow = "1.0.100"

# ==============================================================================
# DATE/TIME
# ==============================================================================
chrono = { version = "0.4.42", features = ["serde"] }

# ==============================================================================
# UUIDS
# ==============================================================================
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# ==============================================================================
# SECURITY
# ==============================================================================
# Rate limiting
# BREAKING CHANGE: governor 0.7 → 0.10.1
# - API updates for rate limiting configuration
governor = "0.10.1"

# ==============================================================================
# CRYPTOGRAPHY & SECURITY (Phase 3: Token & Password Generation)
# ==============================================================================
# Random number generation for tokens
rand = "0.8.5"

# Argon2id password hashing and verification
argon2 = { version = "0.5.3", features = ["std"] }

# Base64 encoding for URL-safe tokens
base64 = "0.22.1"

# ==============================================================================
# ENVIRONMENT
# ==============================================================================
dotenvy = "0.15.7"

# ==============================================================================
# BUILD PROFILE
# ==============================================================================
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Security-hardened release build
[profile.release-hardened]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
