# ==============================================================================
# Cargo.toml - Genetics Processor Dependencies
# ==============================================================================
# Description: Rust dependencies for secure genetic data processing
# Author: Matt Barham
# Created: 2025-10-31
# Modified: 2026-01-17
# Version: 1.0.1
# ==============================================================================
# Security: All versions pinned to latest stable releases (no RC/alpha/beta)
# Review Date: 2025-10-31
# Next Review: 2025-11-30 (monthly security updates)
# ==============================================================================

[package]
name = "genetics-processor"
version = "1.0.0"
edition = "2021"
authors = ["Matt Barham"]
rust-version = "1.75"

[lib]
name = "genetics_processor"
path = "src/lib.rs"

[dependencies]
# ==============================================================================
# ASYNC RUNTIME
# ==============================================================================
tokio = { version = "1.48.0", features = ["full"] }

# ==============================================================================
# DATABASE
# ==============================================================================
# BREAKING CHANGE: sqlx 0.7 → 0.8.6
# - query! macro syntax changes
# - Connection pool API updates
# - Migration: Review sqlx 0.8 changelog before upgrading
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# ==============================================================================
# CRYPTOGRAPHY & SECURITY (Critical - Review carefully)
# ==============================================================================
ring = "0.17.14"          # Cryptographic operations
sha2 = "0.10.9"           # SHA-256 hashing
aes-gcm = "0.10.3"        # AES-GCM encryption

# BREAKING CHANGE: memsec 0.6 → 0.7.0
# - API for secure memory handling updated
# - Migration: Review secure_delete.rs for mlock/munlock usage
memsec = "0.7.0"          # Secure memory (mlock/munlock)

zeroize = "1.8.2"         # Zero memory on drop

# ==============================================================================
# BIOINFORMATICS (VCF Parsing)
# ==============================================================================
# NOTE: noodles-vcf is version 0.x (experimental API)
# Pin exact version to avoid breaking changes
# Review changelog before updating: https://github.com/zaeleus/noodles/blob/master/noodles-vcf/CHANGELOG.md
noodles-vcf = "=0.81.0"   # VCF 4.3/4.4 parser
noodles-bgzf = "=0.43.0"  # BGZF compression support

# ==============================================================================
# FILE HANDLING
# ==============================================================================
flate2 = "1.1.5"          # Gzip compression/decompression
csv = "1.4.0"             # CSV parsing
walkdir = "2.5.0"         # Directory traversal

# ==============================================================================
# RANDOM NUMBER GENERATION (Security-sensitive)
# ==============================================================================
rand = "0.8.5"            # Random number generation (for secure deletion)

# ==============================================================================
# VALIDATION
# ==============================================================================
# BREAKING CHANGE: validator 0.18 → 0.20.0
# - Validation attribute syntax may have changed
# - Migration: Review validator.rs if using derive macros
validator = "0.20.0"      # Input validation

# ==============================================================================
# SERIALIZATION
# ==============================================================================
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# ==============================================================================
# OUTPUT FORMATS (Multi-format genetic data export)
# ==============================================================================
# Apache Arrow/Parquet for columnar data (data science workflows)
arrow = "54.0.0"
parquet = "54.0.0"

# SQLite for queryable database output
# Note: Using 0.32.1 for compatibility with sqlx's libsqlite3-sys 0.30.1
rusqlite = { version = "0.32.1", features = ["bundled"] }

# ==============================================================================
# LOGGING
# ==============================================================================
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# ==============================================================================
# ERROR HANDLING
# ==============================================================================
# BREAKING CHANGE: thiserror 1.0 → 2.0.17 (MAJOR VERSION)
# - Display trait implementation changes
# - Error derive macro syntax updates
# - Migration: Test all error types after upgrade
# - Reference: https://github.com/dtolnay/thiserror/releases/tag/2.0.0
thiserror = "2.0.17"

anyhow = "1.0.100"        # Flexible error handling

# ==============================================================================
# DATE/TIME
# ==============================================================================
chrono = { version = "0.4.42", features = ["serde"] }

# ==============================================================================
# UUIDS
# ==============================================================================
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# ==============================================================================
# COMMAND LINE
# ==============================================================================
clap = { version = "4.5.51", features = ["derive", "env"] }

# ==============================================================================
# DEVELOPMENT DEPENDENCIES (tests only)
# ==============================================================================
[dev-dependencies]
tempfile = "3.15.0"

# ==============================================================================
# BUILD PROFILE
# ==============================================================================
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Security-hardened release build
[profile.release-hardened]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# ==============================================================================
# BREAKING CHANGES SUMMARY (for migration)
# ==============================================================================
# 1. thiserror 1.0 → 2.0.17 (MAJOR)
#    - Check all #[derive(Error)] implementations
#    - Display format changes
#    - Test: cargo test --all-features
#
# 2. sqlx 0.7 → 0.8.6
#    - Connection pool API changes
#    - query! macro updates
#    - Test: cargo build && cargo test
#
# 3. memsec 0.6 → 0.7.0
#    - mlock/munlock API updates
#    - Review: src/secure_delete.rs
#
# 4. validator 0.18 → 0.20.0
#    - Validation attribute syntax
#    - Review: src/validator.rs
#
# Migration Plan:
# 1. Update dependencies: cargo update
# 2. Fix compilation errors (thiserror, sqlx)
# 3. Run tests: cargo test --all-features
# 4. Review secure_delete.rs (memsec changes)
# 5. Review validator.rs (validator changes)
# 6. Security audit: cargo audit
# ==============================================================================
