# ==============================================================================
# Cargo.toml - Genetics Worker Dependencies
# ==============================================================================
# Description: Rust dependencies for genetics processing worker
# Author: Matt Barham
# Created: 2025-11-06
# Modified: 2026-01-17
# Version: 1.0.0
# ==============================================================================
# Security: All versions pinned to latest stable releases (no RC/alpha/beta)
# Review Date: 2025-11-06
# Next Review: 2025-12-06 (monthly security updates)
# ==============================================================================

[package]
name = "genetics-worker"
version = "1.0.0"
edition = "2021"
authors = ["Matt Barham"]
rust-version = "1.91"

# ==============================================================================
# ASYNC RUNTIME
# ==============================================================================
[dependencies]
tokio = { version = "1.48.0", features = ["full"] }

# ==============================================================================
# DATABASE
# ==============================================================================
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# ==============================================================================
# REDIS (Job Queue)
# ==============================================================================
redis = { version = "0.32.2", features = ["tokio-comp", "connection-manager"] }

# ==============================================================================
# GENETICS PROCESSOR (Local Dependency)
# ==============================================================================
genetics-processor = { path = "../app" }

# ==============================================================================
# SERIALIZATION
# ==============================================================================
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# ==============================================================================
# LOGGING
# ==============================================================================
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# ==============================================================================
# ERROR HANDLING
# ==============================================================================
thiserror = "2.0.17"
anyhow = "1.0.100"

# ==============================================================================
# DATE/TIME
# ==============================================================================
chrono = { version = "0.4.42", features = ["serde"] }

# ==============================================================================
# UUIDS
# ==============================================================================
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# ==============================================================================
# ENVIRONMENT
# ==============================================================================
dotenvy = "0.15.7"

# ==============================================================================
# CRYPTOGRAPHY & SECURITY (Phase 3: Token & Password Generation)
# ==============================================================================
# Random number generation for tokens and passwords
rand = "0.8.5"

# Argon2id password hashing
argon2 = { version = "0.5.3", features = ["std"] }

# Base64 encoding for URL-safe tokens
base64 = "0.22.1"

# ==============================================================================
# EMAIL (Phase 4/5: Email Sending)
# ==============================================================================
# SMTP email client
lettre = { version = "0.11.12", features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# ==============================================================================
# FILE COMPRESSION (Phase 7: Download Archive)
# ==============================================================================
# ZIP archive creation with STORE method (no compression)
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

# ==============================================================================
# BUILD PROFILE
# ==============================================================================
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Security-hardened release build
[profile.release-hardened]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
